crates/wac-parser/tests/resolution/fail/invalid-value-type.wac
interface i {

}

type x = func(i: i);